[package]
name = "gel"
version = "0.1.0"
authors = ["Nazım Can Altınova <canaltinova@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
log = "0.4"
env_logger = "0.7"
chrono = "0.4"
rand = "0.7"