[package]
name = "gel"
version = "0.1.0"
authors = ["Nazım Can Altınova <canaltinova@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
log = "0.4"
env_logger = "0.7"
chrono = "0.4"
sha1 = "0.6.0"
hex = "0.4.0"
flate2 = "1.0.12"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"]
